Navigation button image added, need to fix vertical alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 
 a {
     text-decoration: none;
+    color: black;
 }
 
 a:hover {
@@ -9,34 +10,44 @@ a:hover {
 
 a:visited {
     text-decoration: none;
-    color: black;
+    color: inhert;
 }
 
+.buttonimg {
+    max-height: 100%;
+    position: relative;
+    bottom: -4px;
+}
 nav {
     padding: 5px 5px 5px 5px;
     margin: 5px 5px 5px 5px;
     font-size: 14px;
     font-family: arial, sans-serif;
+
 }
 
 a.navlinks {
     margin-left: 25px;
+    top: 50%;
 }
 
 #topnav {
     width: 100%;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
+    display: block;
+    vertical-align: middle;
+    height: 40px;
+    padding: 6px 6px 6px 6px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
 }
 
 #rightnav {
-    align-self: flex-end;
-
+    float: right;
 }
 
 #leftnav {
-    align-self: flex-start;
+   float: left;
 }
 
 .centercontent {
@@ -51,4 +62,16 @@ a.navlinks {
     max-height: 100%;
     max-width: 100%;
 
+}
+
+.button {
+    background-color:rgb(26, 115, 232);
+    color: #FFF;
+    border-radius: 4px;
+    margin-left: 25px;
+    padding-left: 23px;
+    padding-right: 23px;
+    padding-bottom: 9px;
+    padding-top: 9px;
+    
 }
